--- a/index.html
+++ b/index.html
@@ -8,6 +8,82 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- 🌙 Tema Gelap Elegan -->
+  <style>
+    body {
+      background-color: #1E1E2E; /* warna dasar gelap kebiruan */
+      color: #f8f9fa; /* teks terang */
+      font-family: "Poppins", sans-serif;
+    }
+
+    h1 {
+      color: #a8ffbf;
+      text-shadow: 0 0 8px rgba(168, 255, 191, 0.5);
+    }
+
+    .card {
+      background-color: #2b2b3d;
+      color: #f8f9fa;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 10px;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    .card:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 4px 10px rgba(0, 255, 128, 0.2);
+    }
+
+    .modal-content {
+      background-color: #2b2b3d;
+      color: #f8f9fa;
+      border-radius: 10px;
+    }
+
+    .input-group .form-control {
+      background-color: #2b2b3d;
+      color: #f8f9fa;
+      border: 1px solid #444;
+    }
+
+    .input-group .form-control::placeholder {
+      color: #aaa;
+    }
+
+    .btn-primary {
+      background-color: #3a7d44;
+      border-color: #3a7d44;
+    }
+
+    .btn-primary:hover {
+      background-color: #4ca35e;
+      border-color: #4ca35e;
+    }
+
+    .border {
+      border-color: rgba(255, 255, 255, 0.1) !important;
+    }
+
+    /* Arab font styling */
+    @import url('https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap');
+
+    .teks-arab {
+      font-family: 'Scheherazade New', serif;
+      font-size: 28px;
+      text-align: right;
+      color: #d1ffd8;
+    }
+
+    /* scrollbar halus */
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+    ::-webkit-scrollbar-thumb {
+      background-color: #3a7d44;
+      border-radius: 10px;
+    }
+  </style>
 </head>
 <body>
   <div class="container mt-4">
@@ -31,7 +107,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="detailModalLabel">Detail Surat</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
             <span>&times;</span>
           </button>
         </div>
@@ -68,7 +144,7 @@
           $('#listSurat').append(`
             <div class="card mb-3 shadow-sm">
               <div class="card-body">
-                <h5 class="card-title">${surat.namaLatin} (${surat.nama})</h5>
+                <h5 class="card-title text-success">${surat.namaLatin} (${surat.nama})</h5>
                 <p class="card-text">Surat ke-${surat.nomor} | Jumlah Ayat: ${surat.jumlahAyat}</p>
                 <button class="btn btn-primary btn-detail" data-id="${surat.nomor}" data-nama="${surat.namaLatin}">Lihat Detail</button>
               </div>
@@ -112,7 +188,7 @@
             ayatList.forEach(function(ayat){
               content += `
                 <div class="mb-3 p-3 border rounded">
-                  <h5 class="text-right" style="font-family: 'Scheherazade', serif; font-size: 28px;">${ayat.teksArab}</h5>
+                  <h5 class="teks-arab">${ayat.teksArab}</h5>
                   <p><strong>Terjemahan:</strong> ${ayat.teksIndonesia}</p>
                 </div>
               `;
